[package]
name = "rmotw_fake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fake = { version = "2.9", features = ["derive", "uuid", "chrono"] }
locale = "0.2.2"
rand = "0.8.5"
uuid = "1.5.0"
